# glPathTracer

./: .gitignore  App.cpp  App.hpp  CMakeLists.txt  Camera.cpp  Camera.hpp  ComputeShader.cpp  ComputeShader.hpp  README.md  Renderer.cpp  Renderer.hpp  Shader.cpp  Shader.hpp  glad.c  main.cpp  resources.md
libs/glad/include/glad/: glad.h
libs/glfw-3.4.bin.WIN64/include/GLFW/: glfw3.h
libs/tinyobjloader/: tiny_obj_loader.h
resources/: dragon.mtl  helmet.mtl  icosphere.mtl  suzanne.mtl  suzanne_2.mtl  test_scene.mtl
resources/objects/: backdrop.mtl  cornell.mtl  cylinder.mtl  dragon.mtl  mando.mtl  mask.mtl  mirror_ball.mtl  squid.mtl
resources/scenes/: dragon_scene.txt  mando_scene.txt  mask_scene.txt  mirror_ball_scene.txt  squid_scene.txt
shaders/: default.comp  default.frag  default.vert  path_tracing.comp  path_tracing.frag  path_tracing.vert
src/: App.cpp  App.hpp  Camera.cpp  Camera.hpp  ComputeShader.cpp  ComputeShader.hpp  GeometryManager.cpp  GeometryManager.hpp  Loader.cpp  Loader.hpp  Mesh.cpp  Mesh.hpp  Renderer.cpp  Renderer.hpp  Scene.cpp  Scene.hpp  Shader.cpp  Shader.hpp
src/utils/: glad.c
